structmeta-tests/tests/compile_fail/struct_meta/duplicate_named_arguments.rs
#[structmeta_tests::attr_required_name_value(value = 10, value = 20)]
fn my_func() {}

fn main() {}
